# harp

./: .gitignore  CHANGELOG.md  README.md  TASKS.md  makefile  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cli.md  deploy.md  design.md  develop.md  index.md  library.md
journal/: 2026-03-03.md  2026-03-04.md  2026-03-09.md  2026-03-11.md
plans/: audio-capture.md  audio-transcription.md  cli-overhaul-config.md  clipboard-context-features.md  fast-transcription-implementation.md  fast-transcription-v2-streaming.md  fix-terminal-pollution.md  implement-mvp.md  interactive-mode.md  keyboard-emulation.md  local-first-whisper-refactor.md  overhaul-interactive-mode.md  scaffold-ci-cd.md  scaffold.md  voice-integration-test.md
research/: fast_transcription_optimization.md  interactive-transcription-strategies.md  rca-terminal-pollution.md  rca-typing-issues.md  research-local-whisper-streaming.md
research/fast_transcription/: network_implementation.md  openrouter_capabilities.md  prompt_optimization.md  streaming_strategies.md
research/interactive-transcription/: q1_current_hurdles.md  (+5 more)
scripts/: record_ground_truth.py  reproduce_cuda_error.py  reproduce_int8_error.py
src/harp/: api.py  (+11 more)
tests/: conftest.py  fakes.py  integration_interactive.py  test_api.py  test_audio.py  test_audio_source_protocol.py  test_clipboard.py  test_daemon.py  test_daemon_async.py  test_display.py  test_events.py  test_hotkey.py  test_incremental_typer.py  test_input.py  test_integration_end_to_end.py  test_integration_interactive.py  test_main.py  test_session.py  test_streaming.py
(+19 files in other folders)
